# Continuum

./: .gitignore  .gitmodules  README.md  notes.txt  potential_wells.py
FiniteElements/: CMakeLists.txt  CameraController.cpp  CameraController.h  Filmer.cpp  Filmer.h  FiniteVolume.cpp  FiniteVolumes.cpp  HeatSolver.cpp  LaplaceSolver.cpp  P2_P1.h  QuadraticLaplaceSolver.cpp  basis_quadratic_figure.cpp  core.cpp  core.h  discretization_figure.cpp  error_metric.py  main.cpp  manufactured_solutions.py  mesh_generators.cpp  mesh_generators.h  quadratic.py  quadratic_figure.cpp
FiniteElements/FlowVisualization/: main.cpp
FiniteElements/FlowVisualization/__scrap/: compute_velocity_residual.cpp
FiniteElements/LidDrivenCavity/: LidDrivenCavity.cpp  demo.cpp  solver.cpp  tmp
FiniteElements/NavierStokes/: CameraController.cpp  NavierStokesSolver.cpp  NavierStokesSolver.h  P2_P1.h  add_nonlinear_velocity_residual.cpp  compute_gateaux_matrix_bottom_left.cpp  compute_gateaux_matrix_top_left.cpp  compute_linear_term_matrix_bottom_left.cpp  compute_linear_term_matrix_top_left.cpp  compute_velocity_residual.cpp  core.h  demo.cpp  demo.h  main.cpp  mesh_generators.cpp  mesh_generators.h
FiniteElements/NavierStokes/__scrap/: add_velocity_residual_pressure.cpp  add_velocity_residual_time_step.cpp  add_velocity_residual_viscosity.cpp
FiniteElements/ReactionDiffusion/: ReactionDiffusion.cpp  ReactionDiffusion.h  demo.cpp  demo.h  main.cpp
FiniteElements/SurfaceFlowVisualization/: main.cpp
FiniteElements/SurfaceNavierStokes/: SurfaceNavierStokesSolver.cpp  SurfaceNavierStokesSolver.h  compute_centripetal_block_coefficients.cpp  compute_matrix.cpp  compute_pressure_block_coefficients.cpp  compute_rhs.cpp  compute_velocity_block_coefficients.cpp  demo.cpp  demo.h  explicit_advection.cpp  main.cpp  make_sparsity_image.cpp  scrap
FiniteElements/SurfaceNavierStokes/__scrap/: compute_pressure_residual.cpp
FiniteElements/WeaklyIncompressible/: TaylorHood.cpp  WeaklyIncompressible.cpp  demo.cpp  div_P2_P2.cpp  pressure_gradient_source.cpp  pressure_update.cpp  project_divergence.cpp  scalar_poisson_system.cpp  scrap.txt  solver.cpp  sparsity_pattern.cpp  take_high_res_screenshots.cpp  velocity_laplacian_system.cpp
FiniteElements/__old/: mesh_generators.cpp
FiniteElements/data/: P20_P20_gramian.ppm  P2_P2_gramian.ppm  circle_cloud.1.ele  circle_cloud.1.node  circle_cloud.node  error_metric_file.txt  error_metric_file_1.txt  error_metric_file_square_2.txt  error_metric_file_square_2_fixup.txt  error_metric_file_square_fixup.txt  pressure_gramian.ppm  quadratic_error_file.txt  scalar_velocity_gramian.ppm  sparsity_pattern.ppm
FiniteElements/dependencies/triangle/: CMakeLists.txt  triangle_wrapper.h
FiniteElements/edits/: LaplaceSolver_figure_triangulation.cpp
FiniteElements/flow_data/__sns/: navier_stokes_0.txt  navier_stokes_1.txt  navier_stokes_10.txt  navier_stokes_11.txt  navier_stokes_12.txt  navier_stokes_13.txt  navier_stokes_14.txt  navier_stokes_2.txt  navier_stokes_3.txt  navier_stokes_4.txt  navier_stokes_5.txt  navier_stokes_6.txt  navier_stokes_7.txt  navier_stokes_8.txt  navier_stokes_9.txt
FiniteElements/flow_data/navier_data_4/: navier_stokes_0.txt  navier_stokes_1.txt  navier_stokes_10.txt  navier_stokes_100.txt  navier_stokes_101.txt  navier_stokes_102.txt  navier_stokes_103.txt  navier_stokes_104.txt  navier_stokes_105.txt  navier_stokes_106.txt  navier_stokes_107.txt  navier_stokes_108.txt  navier_stokes_109.txt  navier_stokes_11.txt  navier_stokes_110.txt  navier_stokes_111.txt  navier_stokes_112.txt  navier_stokes_113.txt  navier_stokes_114.txt  navier_stokes_115.txt  navier_stokes_116.txt  navier_stokes_117.txt  navier_stokes_118.txt  navier_stokes_119.txt  navier_stokes_12.txt  navier_stokes_120.txt  navier_stokes_121.txt  navier_stokes_122.txt  navier_stokes_123.txt  navier_stokes_124.txt  navier_stokes_125.txt  navier_stokes_126.txt  navier_stokes_127.txt  navier_stokes_128.txt  navier_stokes_129.txt  navier_stokes_13.txt  navier_stokes_130.txt  navier_stokes_131.txt  navier_stokes_132.txt  navier_stokes_133.txt  (+860 more)
FiniteElements/flow_data/sns/: navier_stokes_0.txt  navier_stokes_1.txt  navier_stokes_10.txt  navier_stokes_11.txt  navier_stokes_12.txt  navier_stokes_13.txt  navier_stokes_14.txt  navier_stokes_15.txt  navier_stokes_16.txt  navier_stokes_17.txt  navier_stokes_18.txt  navier_stokes_19.txt  navier_stokes_2.txt  navier_stokes_20.txt  navier_stokes_21.txt  navier_stokes_22.txt  navier_stokes_23.txt  navier_stokes_24.txt  navier_stokes_3.txt  navier_stokes_4.txt  navier_stokes_5.txt  navier_stokes_6.txt  navier_stokes_7.txt  navier_stokes_8.txt  navier_stokes_9.txt
FiniteElements/flow_data/traversal/: navier_stokes_0.txt  navier_stokes_1.txt  navier_stokes_10.txt  navier_stokes_11.txt  navier_stokes_12.txt  navier_stokes_13.txt  navier_stokes_14.txt  navier_stokes_15.txt  navier_stokes_16.txt  navier_stokes_17.txt  navier_stokes_18.txt  navier_stokes_19.txt  navier_stokes_2.txt  navier_stokes_20.txt  navier_stokes_21.txt  navier_stokes_22.txt  navier_stokes_23.txt  navier_stokes_24.txt  navier_stokes_25.txt  navier_stokes_26.txt  navier_stokes_27.txt  navier_stokes_28.txt  navier_stokes_29.txt  navier_stokes_3.txt  navier_stokes_30.txt  navier_stokes_31.txt  navier_stokes_32.txt  navier_stokes_33.txt  navier_stokes_34.txt  navier_stokes_35.txt  navier_stokes_36.txt  navier_stokes_37.txt  navier_stokes_38.txt  navier_stokes_39.txt  navier_stokes_4.txt  navier_stokes_40.txt  navier_stokes_41.txt  navier_stokes_42.txt  navier_stokes_43.txt  navier_stokes_44.txt  (+49 more)
FiniteElements/models/: bunny_head.stl  drive_wheel.stl  icosahedron.ply  icosahedron_hole.ply  simple_gear.ply  sphere.off  sphere.stl  tangram.stl
FiniteElements/shaders/flow_visualization_render_solution/: render_solution.frag
FiniteElements/shaders/flow_visualization_solution/: solution.frag  solution.tes  solution.vert
FiniteElements/shaders/plot/: plot.frag
FiniteElements/shaders/quadratic_mesh/: quadratic_mesh.frag  quadratic_mesh.tes
code/: vector_field.py
fem/: notes.txt
(+92 files in other folders)
